internal/reconciliations/istio_resources/peer_authentication_mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: istio-system
  labels:
    kyma-project.io/module: istio
    app.kubernetes.io/component: operator
    app.kubernetes.io/part-of: istio
    app.kubernetes.io/name: istio-operator
    app.kubernetes.io/instance: istio-operator-default
spec:
  mtls:
    mode: STRICT
