internal/reconciliations/istio_resources/envoy_filter_allow_partial_referer.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: kyma-referer
  namespace: istio-system
  labels:
    kyma-project.io/module: istio
    app.kubernetes.io/component: operator
    app.kubernetes.io/part-of: istio
    app.kubernetes.io/name: istio-operator
    app.kubernetes.io/instance: istio-operator-default
spec:
  configPatches:
    - applyTo: BOOTSTRAP
      patch:
        operation: MERGE
        value:
          layered_runtime:
            layers:
              - name: kyma_referer
                static_layer:
                  envoy.reloadable_features.http_allow_partial_urls_in_referer: false
